--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@ body {
 
 .sidebar {
   width: 8rem;
-  height: 100%;
+  height: 100vh;
   background-color: #5b5b5ba8;
   padding: 1rem;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
