--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@ body {
 
 .sidebar {
   width: 8rem;
-  height: 100vh;
+  height: 100%;
   background-color: #5b5b5ba8;
   padding: 1rem;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
@@ -172,13 +172,4 @@ body {
 
 .sidebar_name {
   margin-left: 0.5rem;
-}
-
-[data-collapse="true"] {
-  width: 5.3rem;
-}
-
-[data-collapse="true"] .sidebar_name,
-[data-collapse="true"] .sidebar_logo-name {
-  display: none;
 }
