hover effect for ranks

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,6 +98,13 @@
 .rank {
   display: inline-block;
   padding: 0.5%;
+
+}
+
+.rank:hover {
+  background-color: #e5e7eb;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 .submit-button {
